--- a/ChallengeCoodesh-FRONT/package.json
+++ b/ChallengeCoodesh-FRONT/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "react": "^18.2.0",
+    "react-data-grid": "^7.0.0-beta.30",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
