--- a/ChallengeCoodesh-BACK/docker-compose.override.yml
+++ b/ChallengeCoodesh-BACK/docker-compose.override.yml
@@ -4,9 +4,8 @@ services:
   challengecoodesh-back:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=https://+:443;http://+:80
+      - ASPNETCORE_URLS=http://+:80
     ports:
-      - "80"
-      - "443"
+      - "51470:80"
     volumes:
       - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
